most styling done, before fixing navbar collapse

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,23 +1,44 @@
 
 
 /* ----- big tablets to 1200px (widths smaller than the 1140px row) ----- */
+
 @media only screen and (max-width: 1200px)   {
     
-.carousel .item {
-    background-position: right;
-}
-
-
+    p { font-size: 80% }
+    
+    .carousel-container {margin-top: 150px;}
+    .carousel .item { background-position: right; }
+    .force {text-align: center;}
+            
+   /* ----- watches ----- */
+    
+    .dinamico-box { background-position: right; }
+    
+    .militare-title { margin-left: 40px; }
+    .militare-description { margin-left: 40px; }
+    .btn-militare { margin-left: 40px; }
+    
+    .gran-turismo-box { background-position: right; }
+    .gran-turismo-description { margin-right: 20px; }
+    .btn-turismo { margin-right: 20px; }
+    
+    .footer {padding: 0; }
 
 
 /* ----- small tablets to big tablets: from 768 to 1023px ----- */
+    
 @media only screen and (max-width: 1023px)   {
     body { font-size: 18px; }
     h1 { font-size: 70px; }
+    p { font-size: 80%; }
     section { padding: 60px 0; }
-    .carousel-container {margin-top: 150px};
+    .carousel-container {margin-top: 150px;}
     .force {text-align: center;}
     .signature { margin: 0 auto;}
+    
+    .supersportivo-button-grid {
+    margin-top: 80px;
+    }
     
     .navbar center li 
     .nav>li>a>img {
@@ -25,34 +46,56 @@
         height: 70%;
     }
     
+     /* ----- watches ----- */
     
-}
+    .dinamico-box { background-position: right; }
+    .gran-turismo-box { background-position: right; }
+    .footer {padding: 0; }
+}   
 
 
 
 
 /* ----- small phones to small tablets: from 481 To 767px ----- */
+    
 @media only screen and (max-width: 767px)   {
     h1 {
         text-align: center;
         margin: auto;
         font-size: 60px;
     } 
-    .force {text-align: center;}
-    
-    .supersportivo-button-grid { margin-top: 55px;}
     
     .signature {
         margin: 0 auto;
+        padding-top: 40px;
     }
     
+    .btn-lg-header {
+        margin-top: 0;
+    }
+    
+    .force {text-align: center;}
+    
+    .supersportivo-button-grid { margin-top: 75px;}
+    
+    .navbar-toggle {
+        margin-top: 26px;
+        margin-right: 30px;
+    }
+    
+    
+     /* ----- watches ----- */
+    
+    .dinamico-box { background-position: right; }
+    .gran-turismo-box { background-position: right; }
  
-}
-
-
+    .footer {
+        padding: 0; 
+    }
 
 
 /* ----- small phones: from 0 to 480px ----- */
+    
 @media only screen and (max-width: 480px)   {
     
     body { font-size: 16px; }
@@ -75,7 +118,7 @@
         margin-top: 19px;
         margin-right: 22px;
     }
-    .carousel-container {margin-top: 200px;}
+    .carousel-container {margin-top: 150px;}
     
     
     .signature {
